syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request.message";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "constant/chat_type.proto";
import "constant/message_delivery_status.proto";

message QueryMessagesRequest {
    google.protobuf.Int32Value size = 1;
    ChatType chat_type = 2;
    google.protobuf.BoolValue are_system_messages = 3;
    google.protobuf.Int64Value from_id = 4;
    google.protobuf.Int64Value delivery_date_after = 5;
    google.protobuf.Int64Value delivery_date_before = 6;
    MessageDeliveryStatus delivery_status = 7;
}
